--- a/src/pages/contact/contact.scss
+++ b/src/pages/contact/contact.scss
@@ -1,3 +1,15 @@
 page-contact {
 
 }
+
+ion-app._gmaps_cdv_ .nav-decor{
+  background-color: transparent !important;
+}
+
+home-page {
+
+    #map {
+        height: 100%;
+    }
+
+}
