--- a/src/pages/contact/contact.scss
+++ b/src/pages/contact/contact.scss
@@ -6,10 +6,9 @@ ion-app._gmaps_cdv_ .nav-decor{
   background-color: transparent !important;
 }
 
-home-page {
-
-    #map {
-        height: 100%;
-    }
-
+.contact-paragraph{
+  text-align: center;
+}
+.contact-paragraph > a > ion-icon{
+  font-size: 25px;
 }
