Añadir sistema de búsqueda de profesores, tanto por asignatura como por nombre

--- a/src/pages/general.scss
+++ b/src/pages/general.scss
@@ -11,3 +11,11 @@ ion-header > img {
   max-width: 53px !important;
 
 }
+
+.alert-radio-label{
+  white-space: pre-line !important;
+}
+
+.select-text{
+  white-space: pre-line !important;
+}
